--- a/index.html
+++ b/index.html
@@ -1,236 +1,210 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sachin Gupta - Product Manager</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
-    <style>
-      /* Set default theme colors and font */
-      :root {
-        --primary-color: #4f5dff; /* Brittany's blue color */
-        --accent-color: #1a202c; /* Dark theme background color */
-      }
 
-      /* Cursor Hover Effect */
-      body {
-        cursor: url('https://cdn.jsdelivr.net/gh/brittanychiang/brittanychiang.github.io/cursor.svg'), auto;
-      }
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sachin Gupta - Product Manager</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
 
-      /* Navigation Bar Styles */
-      nav {
-        position: fixed;
-        top: 0;
-        left: 0;
-        right: 0;
-        padding: 16px 20px;
-        background-color: rgba(0, 0, 0, 0.7);
-        z-index: 10;
-      }
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      background-color: #0a192f;
+      color: #ccd6f6;
+    }
 
-      nav a {
-        color: #fff;
-        margin: 0 16px;
-        text-decoration: none;
-        font-weight: 600;
-        transition: all 0.3s ease;
-      }
+    h1,
+    h2,
+    h3 {
+      color: #64ffda;
+    }
 
-      nav a:hover {
-        color: var(--primary-color);
-        transform: translateY(-3px);
-      }
+    a {
+      color: #64ffda;
+    }
 
-      /* Hero Section */
-      .hero {
-        background-image: url('your-hero-image.jpg'); /* Replace with your background image */
-        background-size: cover;
-        background-position: center;
-        height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        color: white;
-        font-family: 'Inter', sans-serif;
-      }
+    .logo-grid img {
+      width: 100%;
+      height: auto;
+      max-width: 200px;
+      transition: transform 0.3s ease;
+    }
 
-      .hero h1 {
-        font-size: 3.5rem;
-        font-weight: 700;
-      }
+    .logo-grid img:hover {
+      transform: scale(1.1);
+    }
 
-      .hero p {
-        font-size: 1.2rem;
-      }
+    /* Hover effect for links */
+    a:hover {
+      color: #fff;
+      text-decoration: underline;
+    }
 
-      /* Section Styles */
-      section {
-        padding: 80px 20px;
-        text-align: center;
-        background-color: var(--accent-color);
-      }
+    /* Cursor effect */
+    .cursor {
+      position: absolute;
+      background-color: #64ffda;
+      border-radius: 50%;
+      width: 15px;
+      height: 15px;
+      pointer-events: none;
+      z-index: 100;
+      transform: scale(0);
+      transition: transform 150ms ease-out;
+    }
 
-      section h2 {
-        font-size: 2rem;
-        font-weight: 600;
-      }
+    .cursor-large {
+      width: 45px;
+      height: 45px;
+      transform: scale(1);
+    }
 
-      section p {
-        font-size: 1.1rem;
-        color: #d1d5db;
-        line-height: 1.5;
-        max-width: 700px;
-        margin: 0 auto;
-      }
+    /* Sticky header */
+    header {
+      position: sticky;
+      top: 0;
+      z-index: 10;
+      background-color: #0a192f;
+      padding: 1.5rem;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
 
-      .logo-grid {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 10px;
-        margin-top: 20px;
-      }
+    /* Smooth scrolling effect */
+    html {
+      scroll-behavior: smooth;
+    }
 
-      .logo-grid img {
-        width: 100%;
-        height: auto;
-      }
+  </style>
 
-      /* Project Section */
-      .project-box {
-        background-color: #2d3e66;
-        padding: 20px;
-        border-radius: 8px;
-        transition: all 0.3s ease-in-out;
-        margin: 15px 0;
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-      }
+</head>
 
-      .project-box:hover {
-        transform: translateY(-5px);
-        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-      }
+<body onmousemove="moveCursor(event)">
 
-      .project-box h3 {
-        font-size: 1.5rem;
-        color: #fff;
-        font-weight: 600;
-      }
+  <!-- Cursor -->
+  <div class="cursor"></div>
 
-      .project-box p {
-        color: #d1d5db;
-        font-size: 1rem;
-      }
+  <!-- Hero Section -->
+  <header class="flex justify-between items-center">
+    <div>
+      <h1 class="text-5xl font-bold">Sachin Gupta</h1>
+      <p class="mt-2 text-xl">Building financial products for B2B and B2C</p>
+    </div>
+    <div>
+      <img src="profile.jpeg" alt="Sachin Gupta" class="w-24 h-24 rounded-full border-2 border-white shadow-lg object-cover">
+    </div>
+  </header>
 
-      .project-box .outcome {
-        font-weight: 600;
-        margin-top: 10px;
-        color: #fff;
-      }
+  <!-- Navigation -->
+  <nav class="sticky-nav py-4 flex justify-center space-x-12">
+    <a href="#about" class="text-xl hover:text-white">About</a>
+    <a href="#projects" class="text-xl hover:text-white">Projects</a>
+    <a href="#affiliations" class="text-xl hover:text-white">Affiliations</a>
+    <a href="#contact" class="text-xl hover:text-white">Contact</a>
+    <a href="#resume" class="text-xl hover:text-white">Resume</a>
+  </nav>
 
-      /* Footer */
-      footer {
-        text-align: center;
-        padding: 40px 0;
-        background-color: #0a192f;
-        color: #fff;
-      }
-
-      /* AOS (Animate On Scroll) custom styles */
-      .aos-init {
-        transition: transform 0.3s ease-out;
-      }
-    </style>
-  </head>
-
-  <body class="bg-black text-white font-inter">
-    <!-- Navigation Bar -->
-    <nav>
-      <a href="#about">About</a>
-      <a href="#projects">Projects</a>
-      <a href="#affiliations">Affiliations</a>
-      <a href="#contact">Contact</a>
-    </nav>
-
-    <!-- Hero Section -->
-    <section class="hero" id="hero">
-      <div class="text-center">
-        <h1>Sachin Gupta</h1>
-        <p>Product Manager | UX/UI | B2B & B2C FinTech</p>
-      </div>
-    </section>
+  <!-- Main Content -->
+  <main class="max-w-4xl mx-auto px-6 py-12 space-y-20">
 
     <!-- About Section -->
     <section id="about" data-aos="fade-up">
-      <h2>About Me</h2>
-      <p>
-        I am a Product Manager with experience in building financial products for both B2B and B2C segments. With a background in Finance and Technology, I specialize in designing scalable systems and seamless user experiences.
-      </p>
+      <h2 class="text-3xl font-bold mb-6">About</h2>
+      <p>I am a Product Manager with experience in building financial products for both B2B and B2C segments. With a background in Finance and Technology, I specialize in designing scalable systems and seamless user experiences.</p>
     </section>
 
     <!-- Projects Section -->
     <section id="projects" data-aos="fade-up">
-      <h2>Projects</h2>
-      <div class="project-box" data-aos="fade-up">
-        <h3>UIDAI eKYC Integration</h3>
-        <p>Integrated UIDAI’s eKYC API into the bank’s onboarding flow for real-time borrower authentication. Led API design, built secure ADV storage, and overcame regulatory and data mapping challenges.</p>
-        <p class="outcome">Outcome: Enabled the bank’s first vertical using UIDAI API, saving over ₹12L annually.</p>
-      </div>
+      <h2 class="text-3xl font-bold mb-6">Projects</h2>
 
-      <div class="project-box" data-aos="fade-up">
-        <h3>Decommissioning Legacy LOS</h3>
-        <p>Spearheaded the redesign of a rigid LOS into a modular platform integrated with LMS, Collection, and API systems. Created data flows, screens, and a new BRE to handle complex loan logic.</p>
-        <p class="outcome">Outcome: Delivered a flexible, modern lending system—reduced tech debt and enabled faster launches.</p>
-      </div>
+      <div class="space-y-6">
+        <div class="project-box bg-gradient-to-r from-gray-800 to-gray-900 p-6 rounded-xl">
+          <h3 class="text-xl font-bold">UIDAI eKYC Integration</h3>
+          <p>Integrated UIDAI’s eKYC API into the bank’s onboarding flow for real-time borrower authentication.</p>
+          <p class="mt-2 font-semibold">Outcome:</p>
+          <p>Enabled the bank’s first vertical using UIDAI API, saving over ₹12L annually.</p>
+        </div>
 
-      <div class="project-box" data-aos="fade-up">
-        <h3>Managing Government Business</h3>
-        <p>Led internal systems to support government lending programs like NRLM, NULM, and SHG. Improved PSL tracking and SMF categorization.</p>
-        <p class="outcome">Outcome: Helped the bank stay compliant with RBI PSL mandates and reduce manual intervention.</p>
-      </div>
+        <div class="project-box bg-gradient-to-r from-gray-800 to-gray-900 p-6 rounded-xl">
+          <h3 class="text-xl font-bold">Decommissioning Legacy LOS</h3>
+          <p>Spearheaded the redesign of a rigid LOS into a modular platform integrated with LMS, Collection, and API systems.</p>
+          <p class="mt-2 font-semibold">Outcome:</p>
+          <p>Delivered a flexible, modern lending system—reduced tech debt and enabled faster launches.</p>
+        </div>
 
-      <div class="project-box" data-aos="fade-up">
-        <h3>Product Strategy at AIC-IL</h3>
-        <p>Developed a product strategy for a cold-chain agri supply chain startup. Conducted market research, built customer personas, and refined business and revenue models to align with rural supply chain needs.</p>
-        <p class="outcome">Outcome: Enabled fundraising and product-market fit in the institutional buyer segment.</p>
+        <div class="project-box bg-gradient-to-r from-gray-800 to-gray-900 p-6 rounded-xl">
+          <h3 class="text-xl font-bold">Managing Government Business</h3>
+          <p>Led internal systems to support government lending programs like NRLM, NULM, and SHG. Improved PSL tracking and SMF categorization.</p>
+          <p class="mt-2 font-semibold">Outcome:</p>
+          <p>Helped the bank stay compliant with RBI PSL mandates and reduce manual intervention.</p>
+        </div>
+
+        <div class="project-box bg-gradient-to-r from-gray-800 to-gray-900 p-6 rounded-xl">
+          <h3 class="text-xl font-bold">Product Strategy at AIC-IL</h3>
+          <p>Developed a product strategy for a cold-chain agri supply chain startup. Conducted market research, built customer personas, and refined business and revenue models.</p>
+          <p class="mt-2 font-semibold">Outcome:</p>
+          <p>Enabled fundraising and product-market fit in the institutional buyer segment.</p>
+        </div>
       </div>
     </section>
 
     <!-- Affiliations Section -->
     <section id="affiliations" data-aos="fade-up">
-      <h2>Industry Affiliations</h2>
-      <div class="logo-grid mb-10">
-        <img src="logo-mother-dairy.webp" alt="Mother Dairy" />
-        <img src="logo-hdfc-bank.jpeg" alt="HDFC Bank" />
-        <img src="logo-zomato.png" alt="Zomato" />
-        <img src="logo-indicold.png" alt="Indicold" />
-        <img src="logo-unacademy.png" alt="Unacademy" />
-        <img src="logo-tata-trusts.png" alt="Tata Trusts" />
-        <img src="logo-big-league.png" alt="The Big League" />
-      </div>
-      <h2>Academic Affiliations</h2>
-      <div class="logo-grid">
-        <img src="irma.png" alt="IRMA" />
-        <img src="logo-svpuat.jpeg" alt="SVPUAT" />
-        <img src="logo-university-illinois.png" alt="University of Illinois" />
+      <h2 class="text-3xl font-bold mb-6">Industry Affiliations</h2>
+      <div class="logo-grid mb-10 grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-6">
+        <img src="logo-mother-dairy.webp" alt="Mother Dairy">
+        <img src="logo-hdfc-bank.jpeg" alt="HDFC Bank">
+        <img src="logo-zomato.png" alt="Zomato">
+        <img src="logo-indicold.png" alt="Indicold">
+        <img src="logo-unacademy.png" alt="Unacademy">
+        <img src="logo-tata-trusts.png" alt="Tata Trusts">
+        <img src="logo-big-league.png" alt="The Big League">
       </div>
     </section>
 
-    <!-- Footer -->
-    <footer>
-      <p>&copy; 2025 Sachin Gupta. All rights reserved.</p>
-    </footer>
+    <!-- Contact Section -->
+    <section id="contact" data-aos="fade-up">
+      <h2 class="text-3xl font-bold mb-4">Contact</h2>
+      <p>Feel free to connect with me on <a href="https://www.linkedin.com/in/sachinguptanxt/" class="underline">LinkedIn</a>.</p>
+    </section>
 
-    <script>
-      // AOS Initialization
-      AOS.init({
-        duration: 1000,
-        easing: 'ease-in-out',
-        once: true
+    <!-- Resume Section -->
+    <section id="resume" data-aos="fade-up">
+      <h2 class="text-3xl font-bold mb-4">Resume</h2>
+      <a href="Sachin_Gupta_Resume.pdf" download class="underline">Download Resume</a>
+    </section>
+
+  </main>
+
+  <!-- Footer -->
+  <footer class="bg-black text-white py-6 text-center">
+    &copy; 2025 Sachin Gupta. All rights reserved.
+  </footer>
+
+  <script>
+    AOS.init({ duration: 1000, easing: 'ease-in-out', once: true });
+
+    const cursor = document.querySelector('.cursor');
+
+    function moveCursor(e) {
+      cursor.style.top = `${e.clientY - cursor.offsetHeight / 2}px`;
+      cursor.style.left = `${e.clientX - cursor.offsetWidth / 2}px`;
+    }
+
+    // Large cursor on hover
+    document.querySelectorAll('a').forEach(link => {
+      link.addEventListener('mouseenter', () => {
+        cursor.classList.add('cursor-large');
       });
-    </script>
-  </body>
+      link.addEventListener('mouseleave', () => {
+        cursor.classList.remove('cursor-large');
+      });
+    });
+  </script>
+
+</body>
+
 </html>
