--- a/index.html
+++ b/index.html
@@ -1,210 +1,194 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sachin Gupta - Product Manager</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
+    <style>
+      /* Default link color for dark theme */
+      nav.sticky-nav a {
+        color: rgba(255, 255, 255, 0.8); /* Slightly dimmed white color */
+      }
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sachin Gupta - Product Manager</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-  <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+      /* Hover effect to be subtle on dark background */
+      nav.sticky-nav a:hover {
+        color: rgba(255, 255, 255, 1); /* Full white on hover */
+      }
 
-  <style>
-    body {
-      font-family: 'Inter', sans-serif;
-      background-color: #0a192f;
-      color: #ccd6f6;
-    }
+      /* Default link color for mobile menu */
+      #mobile-menu a {
+        color: rgba(255, 255, 255, 0.8); /* Slightly dimmed white color */
+      }
 
-    h1,
-    h2,
-    h3 {
-      color: #64ffda;
-    }
+      /* Hover effect for mobile menu */
+      #mobile-menu a:hover {
+        color: rgba(255, 255, 255, 1); /* Full white on hover */
+      }
 
-    a {
-      color: #64ffda;
-    }
+      /* Ensuring Profile Photo remains circular across all screens */
+      .profile-photo {
+        border-radius: 50%;
+        object-fit: cover;
+      }
 
-    .logo-grid img {
-      width: 100%;
-      height: auto;
-      max-width: 200px;
-      transition: transform 0.3s ease;
-    }
+      /* Set a fixed size for all images */
+      .project-image,
+      .affiliation-image {
+        width: 150px; /* Fixed width */
+        height: 150px; /* Fixed height */
+        object-fit: cover;
+      }
 
-    .logo-grid img:hover {
-      transform: scale(1.1);
-    }
-
-    /* Hover effect for links */
-    a:hover {
-      color: #fff;
-      text-decoration: underline;
-    }
-
-    /* Cursor effect */
-    .cursor {
-      position: absolute;
-      background-color: #64ffda;
-      border-radius: 50%;
-      width: 15px;
-      height: 15px;
-      pointer-events: none;
-      z-index: 100;
-      transform: scale(0);
-      transition: transform 150ms ease-out;
-    }
-
-    .cursor-large {
-      width: 45px;
-      height: 45px;
-      transform: scale(1);
-    }
-
-    /* Sticky header */
-    header {
-      position: sticky;
-      top: 0;
-      z-index: 10;
-      background-color: #0a192f;
-      padding: 1.5rem;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    }
-
-    /* Smooth scrolling effect */
-    html {
-      scroll-behavior: smooth;
-    }
-
-  </style>
-
-</head>
-
-<body onmousemove="moveCursor(event)">
-
-  <!-- Cursor -->
-  <div class="cursor"></div>
-
-  <!-- Hero Section -->
-  <header class="flex justify-between items-center">
-    <div>
-      <h1 class="text-5xl font-bold">Sachin Gupta</h1>
-      <p class="mt-2 text-xl">Building financial products for B2B and B2C</p>
-    </div>
-    <div>
-      <img src="profile.jpeg" alt="Sachin Gupta" class="w-24 h-24 rounded-full border-2 border-white shadow-lg object-cover">
-    </div>
-  </header>
-
-  <!-- Navigation -->
-  <nav class="sticky-nav py-4 flex justify-center space-x-12">
-    <a href="#about" class="text-xl hover:text-white">About</a>
-    <a href="#projects" class="text-xl hover:text-white">Projects</a>
-    <a href="#affiliations" class="text-xl hover:text-white">Affiliations</a>
-    <a href="#contact" class="text-xl hover:text-white">Contact</a>
-    <a href="#resume" class="text-xl hover:text-white">Resume</a>
-  </nav>
-
-  <!-- Main Content -->
-  <main class="max-w-4xl mx-auto px-6 py-12 space-y-20">
-
-    <!-- About Section -->
-    <section id="about" data-aos="fade-up">
-      <h2 class="text-3xl font-bold mb-6">About</h2>
-      <p>I am a Product Manager with experience in building financial products for both B2B and B2C segments. With a background in Finance and Technology, I specialize in designing scalable systems and seamless user experiences.</p>
-    </section>
-
-    <!-- Projects Section -->
-    <section id="projects" data-aos="fade-up">
-      <h2 class="text-3xl font-bold mb-6">Projects</h2>
-
-      <div class="space-y-6">
-        <div class="project-box bg-gradient-to-r from-gray-800 to-gray-900 p-6 rounded-xl">
-          <h3 class="text-xl font-bold">UIDAI eKYC Integration</h3>
-          <p>Integrated UIDAI’s eKYC API into the bank’s onboarding flow for real-time borrower authentication.</p>
-          <p class="mt-2 font-semibold">Outcome:</p>
-          <p>Enabled the bank’s first vertical using UIDAI API, saving over ₹12L annually.</p>
+      /* Adjust image size for mobile screens */
+      @media (max-width: 640px) {
+        .project-image,
+        .affiliation-image {
+          width: 120px; /* Smaller size for mobile */
+          height: 120px; /* Smaller size for mobile */
+        }
+      }
+    </style>
+  </head>
+  <body class="dark font-sans">
+    <!-- Sticky Header -->
+    <header class="hero py-6 px-8 shadow-md">
+      <div class="max-w-7xl mx-auto flex justify-between items-center">
+        <div>
+          <h1 class="text-4xl font-bold">Sachin Gupta</h1>
+          <p class="text-lg mt-1">Building financial products for B2B and B2C</p>
         </div>
-
-        <div class="project-box bg-gradient-to-r from-gray-800 to-gray-900 p-6 rounded-xl">
-          <h3 class="text-xl font-bold">Decommissioning Legacy LOS</h3>
-          <p>Spearheaded the redesign of a rigid LOS into a modular platform integrated with LMS, Collection, and API systems.</p>
-          <p class="mt-2 font-semibold">Outcome:</p>
-          <p>Delivered a flexible, modern lending system—reduced tech debt and enabled faster launches.</p>
-        </div>
-
-        <div class="project-box bg-gradient-to-r from-gray-800 to-gray-900 p-6 rounded-xl">
-          <h3 class="text-xl font-bold">Managing Government Business</h3>
-          <p>Led internal systems to support government lending programs like NRLM, NULM, and SHG. Improved PSL tracking and SMF categorization.</p>
-          <p class="mt-2 font-semibold">Outcome:</p>
-          <p>Helped the bank stay compliant with RBI PSL mandates and reduce manual intervention.</p>
-        </div>
-
-        <div class="project-box bg-gradient-to-r from-gray-800 to-gray-900 p-6 rounded-xl">
-          <h3 class="text-xl font-bold">Product Strategy at AIC-IL</h3>
-          <p>Developed a product strategy for a cold-chain agri supply chain startup. Conducted market research, built customer personas, and refined business and revenue models.</p>
-          <p class="mt-2 font-semibold">Outcome:</p>
-          <p>Enabled fundraising and product-market fit in the institutional buyer segment.</p>
+        <div>
+          <!-- Profile Photo with circular shape and responsive size -->
+          <img src="profile.jpeg" alt="Sachin Gupta" class="w-16 h-16 sm:w-20 sm:h-20 md:w-24 md:h-24 profile-photo border-2 border-white shadow-lg object-cover" />
         </div>
       </div>
-    </section>
+    </header>
 
-    <!-- Affiliations Section -->
-    <section id="affiliations" data-aos="fade-up">
-      <h2 class="text-3xl font-bold mb-6">Industry Affiliations</h2>
-      <div class="logo-grid mb-10 grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 gap-6">
-        <img src="logo-mother-dairy.webp" alt="Mother Dairy">
-        <img src="logo-hdfc-bank.jpeg" alt="HDFC Bank">
-        <img src="logo-zomato.png" alt="Zomato">
-        <img src="logo-indicold.png" alt="Indicold">
-        <img src="logo-unacademy.png" alt="Unacademy">
-        <img src="logo-tata-trusts.png" alt="Tata Trusts">
-        <img src="logo-big-league.png" alt="The Big League">
+    <!-- Sticky Navigation -->
+    <nav class="sticky-nav shadow-md py-3 px-4 text-white relative">
+      <div class="max-w-4xl mx-auto flex justify-between items-center relative">
+        <div class="lg:hidden">
+          <button id="hamburger" class="text-white text-2xl">&#9776;</button>
+        </div>
+        <div id="mobile-menu" class="lg:flex hidden flex-col lg:flex-row lg:space-x-6 space-y-4 text-lg bg-gradient-to-r from-gray-900 to-gray-800/95 backdrop-blur-sm lg:bg-transparent p-6 rounded-b-xl absolute top-full left-0 w-full lg:static z-40 text-white shadow-lg">
+          <a href="#about" class="hover:text-white transition-colors duration-200 ease-in-out">About</a>
+          <a href="#projects" class="hover:text-white transition-colors duration-200 ease-in-out">Projects</a>
+          <a href="#affiliations" class="hover:text-white transition-colors duration-200 ease-in-out">Affiliations</a>
+          <a href="#contact" class="hover:text-white transition-colors duration-200 ease-in-out">Contact</a>
+          <a href="#resume" class="hover:text-white transition-colors duration-200 ease-in-out">Resume</a>
+        </div>
+        <button id="theme-toggle" class="bg-gray-800 text-white px-4 py-2 rounded-full hover:bg-gray-700 transition flex items-center">
+          <span id="theme-icon" class="material-icons">dark_mode</span>
+          <span class="ml-2">Toggle Theme</span>
+        </button>
       </div>
-    </section>
+    </nav>
 
-    <!-- Contact Section -->
-    <section id="contact" data-aos="fade-up">
-      <h2 class="text-3xl font-bold mb-4">Contact</h2>
-      <p>Feel free to connect with me on <a href="https://www.linkedin.com/in/sachinguptanxt/" class="underline">LinkedIn</a>.</p>
-    </section>
+    <!-- Main Content -->
+    <main class="max-w-4xl mx-auto px-6 py-12 space-y-20">
+      <section id="about" data-aos="fade-up">
+        <h2 class="text-3xl font-bold mb-4">About</h2>
+        <p>
+          I am a Product Manager with experience in building financial products for both B2B and B2C segments. With a background in Finance and Technology, I specialize in designing scalable systems and seamless user experiences.
+        </p>
+      </section>
 
-    <!-- Resume Section -->
-    <section id="resume" data-aos="fade-up">
-      <h2 class="text-3xl font-bold mb-4">Resume</h2>
-      <a href="Sachin_Gupta_Resume.pdf" download class="underline">Download Resume</a>
-    </section>
+      <section id="projects" data-aos="fade-up">
+        <h2 class="text-3xl font-bold mb-8">Projects</h2>
+        <div class="space-y-6">
+          <div class="project-box p-6 bg-white shadow-lg rounded-lg hover:shadow-2xl transition-shadow">
+            <h3 class="text-xl font-bold">UIDAI eKYC Integration</h3>
+            <p>Integrated UIDAI’s eKYC API into the bank’s onboarding flow for real-time borrower authentication. Led API design, built secure ADV storage, and overcame regulatory and data mapping challenges.</p>
+            <p class="mt-2 font-semibold">Outcome:</p>
+            <p>Enabled the bank’s first vertical using UIDAI API, saving over ₹12L annually.</p>
+            <img src="uidai-ekyc.jpg" alt="UIDAI eKYC Integration" class="project-image mt-4">
+          </div>
+          <div class="project-box p-6 bg-white shadow-lg rounded-lg hover:shadow-2xl transition-shadow">
+            <h3 class="text-xl font-bold">Decommissioning Legacy LOS</h3>
+            <p>Spearheaded the redesign of a rigid LOS into a modular platform integrated with LMS, Collection, and API systems. Created data flows, screens, and a new BRE to handle complex loan logic.</p>
+            <p class="mt-2 font-semibold">Outcome:</p>
+            <p>Delivered a flexible, modern lending system—reduced tech debt and enabled faster launches.</p>
+            <img src="los-system.jpg" alt="Legacy LOS" class="project-image mt-4">
+          </div>
+          <div class="project-box p-6 bg-white shadow-lg rounded-lg hover:shadow-2xl transition-shadow">
+            <h3 class="text-xl font-bold">Managing Government Business</h3>
+            <p>Led internal systems to support government lending programs like NRLM, NULM, and SHG. Improved PSL tracking and SMF categorization.</p>
+            <p class="mt-2 font-semibold">Outcome:</p>
+            <p>Helped the bank stay compliant with RBI PSL mandates and reduce manual intervention.</p>
+            <img src="government-business.jpg" alt="Government Business" class="project-image mt-4">
+          </div>
+          <div class="project-box p-6 bg-white shadow-lg rounded-lg hover:shadow-2xl transition-shadow">
+            <h3 class="text-xl font-bold">Product Strategy at AIC-IL</h3>
+            <p>Developed a product strategy for a cold-chain agri supply chain startup. Conducted market research, built customer personas, and refined business and revenue models to align with rural supply chain needs.</p>
+            <p class="mt-2 font-semibold">Outcome:</p>
+            <p>Enabled fundraising and product-market fit in the institutional buyer segment.</p>
+            <img src="product-strategy.jpg" alt="Product Strategy" class="project-image mt-4">
+          </div>
+        </div>
+      </section>
 
-  </main>
+      <section id="affiliations" data-aos="fade-up">
+        <h2 class="text-3xl font-bold mb-6">Industry Affiliations</h2>
+        <div class="logo-grid mb-10 grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-6">
+          <img src="logo-mother-dairy.webp" alt="Mother Dairy" class="affiliation-image" />
+          <img src="logo-hdfc-bank.jpeg" alt="HDFC Bank" class="affiliation-image" />
+          <img src="logo-zomato.png" alt="Zomato" class="affiliation-image" />
+          <img src="logo-indicold.png" alt="Indicold" class="affiliation-image" />
+          <img src="logo-unacademy.png" alt="Unacademy" class="affiliation-image" />
+          <img src="logo-tata-trusts.png" alt="Tata Trusts" class="affiliation-image" />
+          <img src="logo-big-league.png" alt="The Big League" class="affiliation-image" />
+        </div>
+        <h2 class="text-3xl font-bold mb-6">Academic Affiliations</h2>
+        <div class="logo-grid grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-6">
+          <img src="irma.png" alt="IRMA" class="affiliation-image" />
+          <img src="logo-svpuat.jpeg" alt="SVPUAT" class="affiliation-image" />
+          <img src="logo-university-illinois.png" alt="University of Illinois" class="affiliation-image" />
+        </div>
+      </section>
 
-  <!-- Footer -->
-  <footer class="bg-black text-white py-6 text-center">
-    &copy; 2025 Sachin Gupta. All rights reserved.
-  </footer>
+      <section id="contact" data-aos="fade-up">
+        <h2 class="text-3xl font-bold mb-4">Contact</h2>
+        <p>Feel free to connect with me on <a href="https://www.linkedin.com/in/sachinguptanxt/" class="text-blue-500 underline">LinkedIn</a>.</p>
+      </section>
 
-  <script>
-    AOS.init({ duration: 1000, easing: 'ease-in-out', once: true });
+      <section id="resume" data-aos="fade-up">
+        <h2 class="text-3xl font-bold mb-4">Resume</h2>
+        <a href="Sachin Gupta_ Product.pdf" download class="text-blue-500 underline">Download Resume</a>
+      </section>
+    </main>
 
-    const cursor = document.querySelector('.cursor');
+    <footer class="bg-black text-white py-6 text-center">
+      &copy; 2025 Sachin Gupta. All rights reserved.
+    </footer>
 
-    function moveCursor(e) {
-      cursor.style.top = `${e.clientY - cursor.offsetHeight / 2}px`;
-      cursor.style.left = `${e.clientX - cursor.offsetWidth / 2}px`;
-    }
+    <script>
+      AOS.init({ duration: 1000, easing: 'ease-in-out', once: true });
 
-    // Large cursor on hover
-    document.querySelectorAll('a').forEach(link => {
-      link.addEventListener('mouseenter', () => {
-        cursor.classList.add('cursor-large');
+      const themeToggleButton = document.getElementById("theme-toggle");
+      const currentTheme = localStorage.getItem("theme") || "dark";
+      document.body.classList.add(currentTheme);
+
+      themeToggleButton.addEventListener("click", () => {
+        if (document.body.classList.contains("dark")) {
+          document.body.classList.remove("dark");
+          document.body.classList.add("light");
+          localStorage.setItem("theme", "light");
+        } else {
+          document.body.classList.remove("light");
+          document.body.classList.add("dark");
+          localStorage.setItem("theme", "dark");
+        }
       });
-      link.addEventListener('mouseleave', () => {
-        cursor.classList.remove('cursor-large');
+
+      const hamburgerButton = document.getElementById("hamburger");
+      const mobileMenu = document.getElementById("mobile-menu");
+
+      hamburgerButton.addEventListener("click", () => {
+        mobileMenu.classList.toggle("hidden");
       });
-    });
-  </script>
-
-</body>
-
+    </script>
+  </body>
 </html>
